# motivation-bot

./: Dockerfile  Makefile  README.md  data.txt  main.py  pyproject.toml
