[tool.poetry]
name = "motivation-bot"
version = "0.1.0"
description = "Motivates me"
authors = ["Apau, Emmanuel <e@mechanicode.io>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
